# StravaAggregate

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml
aggregator/: __init__.py
aggregator/activities/: views.py
aggregator/config/: settings.py
aggregator/models/: __init__.py  activities.py  users.py
aggregator/users/: models.py  views.py
migrations/versions/: bd13ced2a128_initial_migration.py
