[tool.poetry]
name = "stravaaggregate"
version = "0.1.0"
description = ""
authors = ["nanoastax <jakub.kramp@profil-software.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
django-environ = "^0.9.0"
black = "^23.1.0"
connexion = "^2.14.2"
Flask-SQLAlchemy = "^3.0.3"
psycopg2-binary = "^2.9.5"
Flask-Migrate = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
